--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,4 +4,4 @@ $main-color:#ffbc00;
 $light-color:#f4f4f4;
 $dark-color: #333;
 $medium-color:#ccc;
-$bg-image: url('/dist/img/backgr.jpg');
+$bg-image: url('/img/backgr.jpg');
