--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,27 @@
   margin: auto;
   overflow: hidden; }
 
+.cv > li{
+  list-style-type: disc;
+  text-align: left;
+}
+
+.bio > p:nth-child(2), .bio > p:nth-child(5), .bio > p:nth-child(9), .bio > p:nth-child(14)  {
+  text-align: left;  
+}
+
+.bio > p:nth-child(4), .bio > p:nth-child(8), .bio > p:nth-child(11), .bio > p:nth-child(13) {
+  text-align: left;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+
+
+.bio > h4 {
+  text-align: left;
+}
+
 .btn-main, .btn-light, .btn-dark {
   display: inline-block;
   padding: 0.8rem 2rem;
@@ -21,7 +42,8 @@
 
 .btn-dark {
   color: #f4f4f4;
-  background: #333; }
+  background: #333;
+  border-radius: 5px; }
 
 .bg-main {
   background: #ffbc00; }
@@ -52,8 +74,8 @@
 .py-3 {
   padding: 3rem 0; }
 
-.py-4 {
-  padding: 4rem 0; }
+/*.py-4 {
+  padding: 4rem 0; }*/
 
 .bottom-line {
   height: 2px;
@@ -105,7 +127,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #333; }
+  color: #fff; }
 
 ul {
   list-style: none; }
@@ -118,7 +140,7 @@ img {
 
 #header-home {
   background: url("/img/backgr.jpg") no-repeat center right/cover;
-  height: 100vh;
+  height: 120vh;
   opacity: 0.8;
   color: #fff; }
   #header-home .header-content {
@@ -232,7 +254,7 @@ img {
 
 #main-footer {
   background: #333;
-  color: white;
+  color: white;  
   height: 5rem; }
   #main-footer .footer-content {
     display: flex;
@@ -243,18 +265,25 @@ img {
       margin-right: 1rem;
       border: 2px #fff solid;
       border-radius: 50%;
-      height: 20px;
-      width: 20px;
+      height: 30px;
+      width: 30px;
       line-height: 20px;
       text-align: center;
       padding: 0.5rem; }
       #main-footer .footer-content .social .fab:hover {
         background: #ffbc00; }
 
+.social {
+  color: white;
+}
+
 #about-a .about-info {
   display: grid;
-  grid-template-areas: "bioimage bio bio" "aw1 aw2 aw3";
+  grid-template-areas: 
+  "bioimage bio bio"
+  "bioimage2 bio bio";
   grid-gap: 1.2rem; }
+
 
 #about-a .bio-image {
   grid-area: bioimage; }
@@ -264,77 +293,86 @@ img {
   border-left: 3px solid #ffbc00;
   padding: 0.8rem; }
 
-#about-a .award-1 {
-  grid-area: aw1; }
 
-#about-a .award-2 {
-  grid-area: aw2; }
+#about-b {
+  margin: auto;
+  height: 70vh;
+  width: 100vh;
+  display: block;
+  align-items: left;
+  background: white;
+  color: #333; }
+  #about-b .progress {
+    overflow: hidden;
+    height: 10px;
+    background: #ccc;
+    border-radius: 5px;
+    margin-bottom: 0.1rem;
+    color: #333; }
+    #about-b .progress div {
+      height: 100%;
+      color: #333;
+      text-align: center;
+      background: #ffbc00; }
 
-#about-a .award-3 {
-  grid-area: aw3; }
 
-#about-a .award-1 .fas,
-#about-a .award-2 .fas,
-#about-a .award-3 .fas {
-  color: #ffbc00;
-  margin: 1 rem; }
-
-#about-b .progress {
-  overflow: hidden;
-  height: 20px;
-  background: #ccc;
-  border-radius: 5px;
-  margin-bottom: 0.6rem; }
-  #about-b .progress div {
-    height: 100%;
-    color: white;
-    text-align: center;
-    background: #ffbc00; }
-
-#about-c .about-logos {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 2rem; }
-  #about-c .about-logos img {
-    width: 70%; }
 
 #about-d .testimonials {
+  /*margin-top: 0;
+  padding-top: 0;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 0.5rem; }
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 1fr;
+  grid-gap: 1rem;*/
+  margin-top: 0 auto;
+  
+  display: grid;
+  
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 1fr;
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  
+  }
   #about-d .testimonials ul {
     list-style: none;
     margin-top: 1rem;
     display: flex;
     align-items: center; }
   #about-d .testimonials p {
+    height: auto;
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 0.5rem; }
-  #about-d .testimonials img {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    margin-right: 1rem; }
+    padding: 0.5rem;
+     }
 
 #contact-a .text-fields {
+  margin: auto;
+  padding: auto;
   display: grid;
-  grid-template-areas: 'name email' 'subject phone' 'message message';
+  grid-template-areas: 'name email'
+ 'subject phone'
+ 'message message';
   grid-gap: 1.2rem;
-  margin-bottom: 1.2rem; }
+  margin-bottom: 1.2rem; 
+  width:70%;}
   #contact-a .text-fields .name-input {
-    grid-area: name; }
+    grid-area: name;
+    height: 25px;  }
   #contact-a .text-fields .subject-input {
-    grid-area: subject; }
+    grid-area: subject;
+    height: 25px;  }
   #contact-a .text-fields .email-input {
-    grid-area: email; }
+    grid-area: email;
+    height: 25px;  }
   #contact-a .text-fields .phone-input {
-    grid-area: phone; }
+    grid-area: phone;
+    height: 25px; }
   #contact-a .text-fields .message-input {
     grid-area: message;
-    height: 100px; }
+    height: 90px; }
   #contact-a .text-fields .text-input {
-    padding: 0.5rem 1rem; }
+    /*padding: 0.5rem 1rem; */}
 
 #contact-a button[type='submit'] {
   width: 50%; }
@@ -342,31 +380,42 @@ img {
 #contact-b .contact-info {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  text-align: center; }
+  text-align: center; 
+  height:87px;}
 
 #contact-c h1 {
   text-align: center;
-  font-size: 4rem;
+  font-size: 3rem;
   color: white; }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 700px) {
+/*768*/
+  
+
   #header-home {
     height: 20rem; }
     #header-home .header-content {
       padding: 5rem; } }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
+/*500*/
+  
+
+
   #main-nav {
     flex-direction: column;
     align-items: center; }
     #main-nav li {
       padding: 1rem; }
   #header-home {
-    height: 10rem;
+    height: 40rem;
     border-bottom: 3px solid #ffbc00;
     background-position: 20% 30%; }
-    #header-home .header-content {
-      display: none; }
+
+  #header-home .header-content h1{
+    font-size: 2rem;
+  }
+  
   #header-inner {
     height: 10rem; }
   #home-a .specials,
@@ -382,21 +431,59 @@ img {
   #home-b .stats div {
     padding: 2rem 0 1rem 0; }
   #about-a .about-info {
-    grid-template-areas: 'bioimage' 'bio' 'aw1' 'aw2' 'aw3'; }
+    grid-template-areas: 'bioimage'
+ 'bio'; }
+
+ #about-a .about-info img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+ }
+
+ #about-b{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+ }
+
   #about-c {
     display: none; }
+
+  .bio-image2 {
+      display: none !important;
+    }
+
+  #about-d .testimonials p {
+    /*height: 220px; */
+  }
+
+ 
+
   #contact-a .text-fields {
-    grid-template-areas: 'name' 'subject' 'email' 'phone' 'message'; }
+    grid-template-areas: 'name'
+ 'subject'
+ 'email'
+ 'phone'
+ 'message';
+ width: auto;
+margin:auto;}
+
   #contact-b div {
     margin-bottom: 1rem;
     padding-bottom: 1rem;
     border-bottom: 1px #555 solid; }
+
     #contact-b div:last-child {
       border: none;
       margin-bottom: 0;
-      padding-bottom: 0; }
+      padding-bottom: 0;
+      }
+
   #contact-c h1 {
-    font-size: 2rem; }
+    font-size: 1.8rem;
+    }
   #main-footer {
     height: 7rem; }
     #main-footer .footer-content {
@@ -407,3 +494,15 @@ img {
 @media screen and (max-height: 580px) {
   #header-home .header.content {
     padding-top: 3rem; } }
+
+
+.companyte {
+    
+    margin-left: 40% !important;
+    
+}
+
+
+
+
+
