--- a/scss/main.scss
+++ b/scss/main.scss
@@ -210,8 +210,8 @@ a{
             margin-right: 1rem;
             border: 2px #fff solid;
             border-radius: 50%;
-            height: 20px;
-            width:20px;
+            height: 30px;
+            width:30px;
             line-height: 20px;
             text-align: center;
             padding: 0.5rem;
@@ -250,15 +250,23 @@ a{
     }
     //About B
     &-b{
+        margin:auto;
+        height: 70vh;
+        width: 100vh;
+        display: block;
+        align-items: left;
+        background: white;
+        color: $dark-color;
         .progress{//Empty progress bar
             overflow:hidden;
-            height:20px;
+            height:10px;
             background: $medium-color;
             border-radius: 5px;
-            margin-bottom: 0.6rem;
+            margin-bottom: 0.1rem;
+            color: $dark-color;
         div{ //this is our progress
             height:100%; //This means the orange color will will up the whole white bar vertically
-            color:white;
+            color: $dark-color;
             text-align: center; //Color and align are in case we want to add some text to it
             background: $main-color;
         }
@@ -279,6 +287,8 @@ a{
 //About D
 &-d {
     .testimonials {
+        margin-top:0;
+        padding-top:0;
         display:grid;
         grid-template-columns: repeat(4, 1fr);
         grid-gap: 0.5rem;
@@ -347,7 +357,6 @@ a{
         }
     }
 }
-
 
 //To include our responsiveness
 @import 'media';
